# Clothing-Classifier

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml
.dvc/: config
clothing_classifier/: dataset.py  infer.py  infer_triton.py  model.py  train.py  utils.py
configs/: config.yaml
configs/data/: default.yaml
configs/model/: resnet34.yaml  resnet50.yaml
configs/training/: default.yaml
scripts/: convert2tensorrt.sh
triton/: docker-compose.yml
triton/model_repository/ensemble_onnx/: config.pbtxt
triton/model_repository/ensemble_trt/: config.pbtxt
triton/model_repository/onnx/: config.pbtxt
triton/model_repository/trt/: config.pbtxt
